<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_load"
        android:icon="@drawable/ic_open_file_white_24dp"
        android:title="@string/load_file"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_save"
        android:icon="@drawable/ic_save_file_white_24dp"
        android:title="@string/save_file"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_screenshot"
        android:icon="@drawable/ic_screenshoot_white_24dp"
        android:title="@string/save_file"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/add_element"
        android:title="@string/add_element" />
    <item android:id="@+id/add_net"
        android:title="@string/add_net" />
    <item android:id="@+id/edit_connection"
        android:title="@string/edit_connection" />
    <item android:id="@+id/move_element"
        android:title="@string/move_element" />
    <item android:id="@+id/move_net"
        android:title="@string/move_net" />
    <item android:id="@+id/delete_element"
        android:title="@string/delete_element_menu" />
    <item android:id="@+id/delete_net"
        android:title="@string/delete_net_menu" />
    <item android:id="@+id/delete_connection"
        android:title="@string/delete_connection_menu" />

</menu>